chore: :wrench: add vue snippets extension

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -14,6 +14,7 @@
     "bradlc.vscode-tailwindcss",
     "stivo.tailwind-fold",
     "enkia.tokyo-night",
-    "raunofreiberg.vesper"
+    "raunofreiberg.vesper",
+    "hollowtree.vue-snippets"
   ]
 }
