--- a/project4/event-booking/package.json
+++ b/project4/event-booking/package.json
@@ -8,7 +8,8 @@
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint . --fix",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "lint-staged": "lint-staged"
   },
   "dependencies": {
     "vue": "^3.5.12"
@@ -19,8 +20,14 @@
     "@vue/eslint-config-prettier": "^10.0.0",
     "eslint": "^9.13.0",
     "eslint-plugin-vue": "^9.29.0",
+    "husky": "^9.1.6",
     "prettier": "^3.3.3",
     "vite": "^5.4.10",
     "vite-plugin-vue-devtools": "^7.5.3"
+  },
+  "lint-staged": {
+    "*.{js,vue}": [
+      "npm run format"
+    ]
   }
 }
