--- a/project4/event-booking/package.json
+++ b/project4/event-booking/package.json
@@ -22,6 +22,7 @@
     "eslint": "^9.13.0",
     "eslint-plugin-vue": "^9.29.0",
     "husky": "^9.1.6",
+    "lint-staged": "^15.2.10",
     "postcss": "^8.4.47",
     "prettier": "^3.3.3",
     "tailwindcss": "^3.4.14",
