refactor: :wrench: update lint-staged commit

--- a/project4/event-booking/package.json
+++ b/project4/event-booking/package.json
@@ -31,8 +31,8 @@
   },
   "lint-staged": {
     "*.{js,vue}": [
-      "npm run lint",
-      "npm run format"
+      "eslint --fix",
+      "prettier --write"
     ]
   }
 }
