--- a/project4/event-booking/.prettierrc.json
+++ b/project4/event-booking/.prettierrc.json
@@ -2,8 +2,10 @@
   "$schema": "https://json.schemastore.org/prettierrc",
   "semi": false,
   "tabWidth": 2,
+  "useTabs": false,
   "singleQuote": true,
   "printWidth": 150,
   "trailingComma": "none",
-  "arrowParens": "avoid"
+  "arrowParens": "avoid",
+  "vueIndentScriptAndStyle": true
 }
