refactor: :wrench: lint-staged all except some

--- a/project4/event-booking/package.json
+++ b/project4/event-booking/package.json
@@ -32,7 +32,7 @@
   "lint-staged": {
     "*.{js,vue}": [
       "eslint --fix",
-      "prettier --write src/"
+      "prettier --write ."
     ]
   }
 }
