--- a/project4/event-booking/package.json
+++ b/project4/event-booking/package.json
@@ -9,7 +9,8 @@
     "preview": "vite preview",
     "lint": "eslint . --fix",
     "format": "prettier --write src/",
-    "lint-staged": "lint-staged"
+    "lint-staged": "lint-staged",
+    "server": "json-server --watch db.json --port 8022"
   },
   "dependencies": {
     "vue": "^3.5.12"
@@ -22,6 +23,7 @@
     "eslint": "^9.13.0",
     "eslint-plugin-vue": "^9.29.0",
     "husky": "^9.1.6",
+    "json-server": "^1.0.0-beta.3",
     "lint-staged": "^15.2.10",
     "postcss": "^8.4.47",
     "prettier": "^3.3.3",
@@ -30,9 +32,9 @@
     "vite-plugin-vue-devtools": "^7.5.3"
   },
   "lint-staged": {
-    "*.{js,vue}": [
+    "*.{js,vue,css,json}": [
       "eslint --fix",
-      "prettier --write"
+      "prettier --write ."
     ]
   }
 }
