--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,7 +11,7 @@
 
   // Editor Display Settings
   "editor.glyphMargin": false,
-  "editor.folding": false,
+  // "editor.folding": false,
   "editor.minimap.enabled": false,
   "editor.smoothScrolling": false,
   "editor.cursorBlinking": "solid",
