--- a/project4/event-booking/package.json
+++ b/project4/event-booking/package.json
@@ -13,6 +13,7 @@
     "server": "json-server --watch db.json --port 8022"
   },
   "dependencies": {
+    "lucide-vue-next": "^0.454.0",
     "vue": "^3.5.12"
   },
   "devDependencies": {
